@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2012-01-19 (SVN):
+    * cd_win.c, gl_vidnt.c, vid_mgl4.c, vid_win.c: The window procedure
+      must return not LONG but LRESULT which really is a LONG for win32
+      but a LONG_PTR for win64.
     * gl_vidnt.c, vid_mgl4.c, vid_win.c: simplified the MSWHEEL_ROLLMSG
       code a bit.
     * updated beta date stamp to 2012-01-19.
